Fix words that were too long didn't get wrapped to next line
Words in the content of the bulletin board cards did not get wrapped to the next line if they were too long.

--- a/src/app/bulletinboard/bulletinboard.component.css
+++ b/src/app/bulletinboard/bulletinboard.component.css
@@ -11,5 +11,10 @@
   margin-left: 15px;
 }
 mat-card-title {
-  word-break: break-word;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+}
+mat-card-content {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 }
